# projet-walmart-bloc3

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
notebook/: 01_data_exploration.ipynb  02_preprocessing.ipynb  03_training_models.ipynb
output/data/: df_preprocessed.csv  metrics_comparison.csv
output/models/: column_transformer.pkl  model_lasso.pkl  model_lr.pkl  model_ridge.pkl
